--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,19 +11,19 @@
     <div class="navbar navbar-inverse">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
-          <span class="icon-bar">Home</span>
+<!--           <span class="icon-bar">Home</span>
           <span class="icon-bar">Menu</span>
-          <span class="icon-bar">Account</span>
+          <span class="icon-bar">Account</span> -->
         </button>
         <a class="navbar-brand" href="/signup"><img src="static/icon2.png" height="40"/></a>
       </div>
       <div class="navbar-collapse collapse navbar-inverse-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
+          <li class="active"><a href="/welcome">Home</a></li>
           <li><a href="#">Menu</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="javascript:void(0)">Sign In</a></li>
+          <li><a href="/login">Sign In</a></li>
           <li><a href="javascript:void(0)">Create Account</a></li>
         </ul>
       </div>
