Yummify - [Kumar] - added first assessment from traitify using sandbox

--- a/app/templates/assessment.html
+++ b/app/templates/assessment.html
@@ -7,7 +7,7 @@
     <div class="assessment"></div>​
     <script>
       Traitify.setPublicKey("2o8onu2m3o2c5qsbg7rdni5kia");
-      Traitify.setHost("https://api.traitify.com");
+      Traitify.setHost("https://api-sandbox.traitify.com");
       Traitify.setVersion("v1");
       var assessmentId = '7fa07c26-4279-4bbe-8132-1a5c012e9515';
       Traitify.ui.load(assessmentId, ".assessment")
