--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,7 @@
     <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
     <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="import" href="static/style.css">
+    <link rel="import" href="static/fancy.js">
   </head>
   <body>
     <div class="navbar navbar-inverse">
@@ -19,7 +20,7 @@
       </div>
       <div class="navbar-collapse collapse navbar-inverse-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/welcome">Home</a></li>
+          <li><a href="/welcome">Home</a></li>
           <li><a href="#">Menu</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
