--- a/app/templates/assessment.html
+++ b/app/templates/assessment.html
@@ -2,8 +2,33 @@
 <html>​
   <head>​
     <script src="https://cdn.traitify.com/lib/v1.js"></script>​
+      <title>yummyfy</title>
+      <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+      <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+      <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+      <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+      <link rel="import" href="static/style.css">
+      <link rel="import" href="static/fancy.js">
   </head>​
   <body>​
+    <div class="navbar navbar-inverse">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-inverse-collapse">
+        </button>
+        <a class="navbar-brand" href="/"><img src="static/icon2.png" height="40"/></a>
+      </div>
+      <div class="navbar-collapse collapse navbar-inverse-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="/">Home</a></li>
+          <li><a href="/menu">Menu</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="/login">Sign In</a></li>
+          <li><a href="/login">Create Account</a></li>
+        </ul>
+      </div>
+    </div>
     <div class="assessment"></div>​
     <script>
       Traitify.setPublicKey("2o8onu2m3o2c5qsbg7rdni5kia");
