--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,11 +16,11 @@
           <span class="icon-bar">Menu</span>
           <span class="icon-bar">Account</span> -->
         </button>
-        <a class="navbar-brand" href="/signup"><img src="static/icon2.png" height="40"/></a>
+        <a class="navbar-brand" href="/"><img src="static/icon2.png" height="40"/></a>
       </div>
       <div class="navbar-collapse collapse navbar-inverse-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="/welcome">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li><a href="#">Menu</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
