--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -27,12 +27,51 @@
 </div>
 <div class="container">
   <div class="row menu" align="center">
-    <div class="col-md-2 day"><h2>Monday</h2></div>
-    <div class="col-md-2 day"><h2>Tuesday</h2></div>
-    <div class="col-md-2 day"><h2>Wednesday</h2></div>
-    <div class="col-md-2 day"><h2>Thursday</h2></div>
-    <div class="col-md-2 day"><h2>Friday</h2></div>
-    <div class="col-md-1 day"><h4>Saturday</h4></div>
-    <div class="col-md-1 day"><h4>Sunday</h4></div>
+    <table class="calendar table table-bordered">
+    <thead>
+      <tr>
+          <th>&nbsp;</th>
+          <th width="14.2%">Sunday</th>
+          <th width="14.2%">Monday</th>
+          <th width="14.2%">Tuesday</th>
+          <th width="14.2%">Wednesday</th>
+          <th width="14.2%">Thursday</th>
+          <th width="14.2%">Friday</th>
+          <th width="14.2%">Saturday</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Gallery</td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"><img src="static/salad.jpg"/ width="100%"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+      </tr>
+      <tr>
+        <td>Ingredients</td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+      </tr>
+      <tr>
+        <td>Recipe</td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+      </tr>
+    </tbody>
+  </table>
   </div>
 </div>
