PreShower styling tweaks

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -26,8 +26,9 @@
   </div>
 </div>
 <div class="container">
-  <div class="row menu" align="center">
-    <table class="calendar table table-bordered">
+  <div class="row menu">
+    <h1>Your meals for the week</h1>
+    <table class="calendar table">
     <thead>
       <tr>
           <th>&nbsp;</th>
@@ -42,29 +43,19 @@
     </thead>
     <tbody>
       <tr>
+        <td>Recipe</td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"><h4>Spinach Citrus Salad</h4></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+        <td class=" no-events" rowspan="1"></td>
+      </tr>
+      <tr>
         <td>Gallery</td>
         <td class=" no-events" rowspan="1"></td>
         <td class=" no-events" rowspan="1"><img src="static/salad.jpg"/ width="100%"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-      </tr>
-      <tr>
-        <td>Ingredients</td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-      </tr>
-      <tr>
-        <td>Recipe</td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
         <td class=" no-events" rowspan="1"></td>
         <td class=" no-events" rowspan="1"></td>
         <td class=" no-events" rowspan="1"></td>
