--- a/app/static/style.css
+++ b/app/static/style.css
@@ -49,12 +49,17 @@ h4 {
 }
 .box {
 	height: 250px;
-	background: #CFD8DC;
+	/*background: #ECEFF1;*/
 	border-radius: 5px;
 	padding: 20px;
 }
 .menu{
 	margin-top: 15px;
+/*	background: #B388FF;*/
+	margin: 20px;
+	padding: 20px;
+	border-radius: 15px;
+	border: 3px solid #B388FF;
 }
 .day{
 	height: 550px;
