Yummify - [Kumar] - added first assessment from traitify using sandbox

--- a/app/templates/assessment.html
+++ b/app/templates/assessment.html
@@ -34,7 +34,7 @@
       Traitify.setPublicKey("2o8onu2m3o2c5qsbg7rdni5kia");
       Traitify.setHost("https://api-sandbox.traitify.com");
       Traitify.setVersion("v1");
-      var assessmentId = '40b0d6ce-fed4-4174-922e-9eaf7aa9e0be';
+      var assessmentId = '{{ assessment_id }}';
       Traitify.ui.load(assessmentId, ".assessment")
     </script>​
   </body>​
