--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -26,43 +26,109 @@
   </div>
 </div>
 <div class="container">
+  <h1>Your meals for the week</h1>
   <div class="row menu">
-    <h1>Your meals for the week</h1>
-    <table class="calendar table">
-    <thead>
-      <tr>
-          <th>&nbsp;</th>
-          <th width="14.2%">Sunday</th>
-          <th width="14.2%">Monday</th>
-          <th width="14.2%">Tuesday</th>
-          <th width="14.2%">Wednesday</th>
-          <th width="14.2%">Thursday</th>
-          <th width="14.2%">Friday</th>
-          <th width="14.2%">Saturday</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Recipe</td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"><h4>Spinach Citrus Salad</h4></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-      </tr>
-      <tr>
-        <td>Gallery</td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"><img src="static/salad.jpg"/ width="100%"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-        <td class=" no-events" rowspan="1"></td>
-      </tr>
-    </tbody>
-  </table>
+    <div class="col-md-12 each">
+      <div class="col-md-5 day">
+        <div class="label">
+          <h2>Monday</h2>
+          <div class="points">
+            <i class="fa fa-star fa-5x"></i>
+            <br><br>
+            <h2>100 points!</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 img">
+        <div class="img">
+          <img src="static/broccolicakes.jpg"width="100%"/>
+          <h3>Broccoli Parmesan Fritters</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12 each">
+      <div class="col-md-5 day">
+        <div class="label">
+          <h2>Tuesday</h2>
+        </div>
+      </div>
+      <div class="col-md-6 img">
+        <div class="img">
+          <img src="static/rest.png" width="100%"/>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12 each">
+      <div class="col-md-5 day">
+        <div class="label">
+          <h2>Wednesday</h2>
+          <div class="points">
+            <i class="fa fa-star fa-5x"></i>
+            <br><br>
+            <h2>150 points!</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 img">
+        <div class="img">
+          <img src="static/chili.png" width="100%"/>
+          <h3>The Best Vegetarian Chili</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12 each">
+      <div class="col-md-5 day">
+        <div class="label">
+          <h2>Thursday</h2>
+        </div>
+      </div>
+      <div class="col-md-6 img">
+        <div class="img">
+          <img src="static/rest.png" width="100%"/>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12 each">
+      <div class="col-md-5 day">
+        <div class="label">
+          <h2>Friday</h2>
+          <div class="points">
+            <i class="fa fa-star fa-5x"></i>
+            <br><br>
+            <h2>50 points!</h2>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 img">
+        <div class="img">
+          <img src="static/salad.jpg"width="100%"/>
+          <h3>Spinach Citrus Salad</h3>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12 each">
+      <div class="col-md-5 day">
+        <div class="label">
+          <h2>Saturday</h2>
+        </div>
+      </div>
+      <div class="col-md-6 img">
+        <div class="img">
+          <img src="static/splurge.png"width="100%"/>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-12 each">
+      <div class="col-md-5 day">
+        <div class="label">
+          <h2>Sunday</h2>
+        </div>
+      </div>
+      <div class="col-md-6 img">
+        <div class="img">
+          <img src="static/rest.png" width="100%"/>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
