add recipe pages

--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -41,7 +41,7 @@
       </div>
       <div class="col-md-6 img">
         <div class="img">
-          <img src="static/broccolicakes.jpg"width="100%"/>
+          <a href="/recipe"><img src="static/broccolicakes.jpg"width="100%"/></a>
           <h3>Broccoli Parmesan Fritters</h3>
         </div>
       </div>
@@ -71,7 +71,7 @@
       </div>
       <div class="col-md-6 img">
         <div class="img">
-          <img src="static/chili.png" width="100%"/>
+          <a href="/recipe"><img src="static/chili.png" width="100%"/></a>
           <h3>The Best Vegetarian Chili</h3>
         </div>
       </div>
