--- a/app/templates/menu.html
+++ b/app/templates/menu.html
@@ -1,5 +1,5 @@
 <head>
-  <title>yummyfy</title>
+  <title>yummyfy-menu</title>
   <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
@@ -71,7 +71,7 @@
       </div>
       <div class="col-md-6 img">
         <div class="img">
-          <a href="/recipe"><img src="static/chili.png" width="100%"/></a>
+          <a href="/recipe2"><img src="static/chili.png" width="100%"/></a>
           <h3>The Best Vegetarian Chili</h3>
         </div>
       </div>
