--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -1,5 +1,5 @@
 <head>
-  <title>yummyfy</title>
+  <title>yummyfy-questions</title>
   <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
@@ -16,7 +16,7 @@
   <div class="navbar-collapse collapse navbar-inverse-collapse">
     <ul class="nav navbar-nav">
       <li><a href="/">Home</a></li>
-      <li><a href="#">Menu</a></li>
+      <li><a href="/menu">Menu</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/login">Sign In</a></li>
