Yummify - [Kumar] - built submit button to redirect to menu once done

--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -181,7 +181,10 @@
         </div>
       </div>
       <div class="col-md-12">
-        <button type="button" class="btn btn-primary">Submit</button>
+          <form name='sendToMenu' method='POST'>
+              <input type="submit" value="Submit" class="submitButton"/>
+                <!--<button type="button" class="btn btn-primary">Submit</button>-->
+          </form>
       </div>
     </div>
   </div>
