--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,7 @@
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
           <li><a href="#">Menu</a></li>
+          <li><a href="/welcome">Health Test</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="/login">Sign In</a></li>
