--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -36,6 +36,7 @@
     <ul class="nav navbar-nav">
       <li><a href="/">Home</a></li>
       <li><a href="/menu">Menu</a></li>
+      <li><a href="/welcome">Health Test</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li><a href="/login">Sign In</a></li>
